--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
   <script src="js/render.js"></script>
   <script src="js/filling-booking.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/Events.js"></script>
 
 </body>
 </html>
