Создал бекенд раздел(не доработан!)

--- a/index.html
+++ b/index.html
@@ -249,10 +249,12 @@
   </template>
 
   <script src="js/data.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/render.js"></script>
   <script src="js/filling-booking.js"></script>
   <script src="js/form.js"></script>
   <script src="js/Events.js"></script>
+
 
 </body>
 </html>
