--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 
   <script src="js/data.js"></script>
   <script src="js/backend.js"></script>
+  <script src="js/card.js"></script>
   <script src="js/render.js"></script>
   <script src="js/filling-booking.js"></script>
   <script src="js/form.js"></script>
