--- a/index.html
+++ b/index.html
@@ -249,12 +249,13 @@
   </template>
 
   <script src="js/data.js"></script>
+  <script src="js/debounce.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/card.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/render.js"></script>
-  <script src="js/form.js"></script>
   <script src="js/Events.js"></script>
+  <script src="js/form.js"></script>
 
 </body>
 </html>
